--- a/Your-impact.html
+++ b/Your-impact.html
@@ -25,7 +25,9 @@
             your voice heard. It's your tax dollars that are being spent on these projects and as you saw in
             the finance page even though that's ficitious finance plan it's based on the average expense 
             for similar projects you should check online because Governments and Corporations make 
-            website like this to pitch their ideas.
+            website like this to pitch their ideas. Residents should also review where a project will 
+            be located and how it may affect protected areas such as reserves, land marks and areas 
+            of historical or environmental significance. 
         </p>
         <h1 class = "title">So see what is being built</h1>
         <h1 class = "title"> and make your opinion clear!</h1>
